# pi-temperature

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  config.ini.example  pyproject.toml
src/: main.py  sensors.py  utils.py
