[tool.poetry]
name = "pi-temperature"
version = "0.0.1"
description = ""
authors = ["maknotavailable <martin.kayser@outlook.com.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
matplotlib = "^3.5.0"
jupyterlab = "^3.2.4"
flake8 = "^4.0.1"
pylint = "^2.12.2"
mypy = "^0.910"
black = "^21.12b0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
